--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,8 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
 nav{
     background-color: steelblue;
     padding: 10px;
@@ -9,6 +14,7 @@ nav a {
 }
 h1 {
     color: steelblue;
+    padding:20px;
 }
 img{
     width: 150px;
@@ -18,19 +24,21 @@ img{
     box-shadow: 0 0 30px gray;
 }
 p{
-    padding: 10px;
+    padding: 20px;
 }
 main{
     max-width: 840px;
 }
 aside{
     width: 20rem;
-    margin: 1rem;
-    border: 1px solid rgba(0,0,0,0.2);/*1*/
-    padding: 1rem;
-    background-color: #eee;
-    color: #333;
     text-align: center;
+   
+}
+aside h2{
+    position: absolute;
+    top: 30px;
+    left: 105px;
+    color:#eee
 }
 aside img{
     width: 200px;
@@ -39,10 +47,20 @@ aside img{
 main img{
     width: 150px;
     height: auto;
+    float:right;
 }
-p{padding: 0;}
 footer{
     margin-top: 15px;
-    border-top: 1px solid #000;
+    border-top: 1px solid #000000;
     text-align: center;
 }
+/* Class Selector */
+.box {
+    margin: 1rem;
+    border: 1px solid rgba(0,0,0,.2);
+    padding: 1.5rem;
+    background-color: #eee;
+    color: #333;
+    position: relative;
+  }
+  
