--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,6 +3,10 @@
     padding: 0;
     box-sizing: border-box;
   }
+body{
+    font-size: 16px;
+    font-family: Roboto, Verdana, sans-serif
+}
 nav{
     background-color: steelblue;
     padding: 10px;
@@ -13,6 +17,7 @@ nav a {
     padding: 20px;
 }
 h1 {
+    font-family: Oswald, sans-serif;
     color: steelblue;
     padding:20px;
 }
@@ -48,6 +53,8 @@ main img{
     width: 150px;
     height: auto;
     float:right;
+    position: relative;
+    margin: 20px;
 }
 footer{
     margin-top: 15px;
