--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,24 +2,35 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-  }
+}
+header, .grid, footer {
+    max-width: 840px;
+    margin: 0 auto;
+}
 body{
     font-size: 16px;
     font-family: Roboto, Verdana, sans-serif
 }
-nav{
+nav {
     background-color: steelblue;
-    padding: 10px;
+    padding: 1rem;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
 nav a {
     color: white;
     display: block;
-    padding: 20px;
+    padding: 0.5rem;
+    text-decoration: none;
+    font-size: 1.2rem;
+    font-weight: 700;
 }
 h1 {
     font-family: Oswald, sans-serif;
     color: steelblue;
     padding:20px;
+    border-bottom: 1px solid steelblue;
 }
 img{
     width: 150px;
@@ -31,23 +42,27 @@ img{
 p{
     padding: 20px;
 }
-main{
-    max-width: 840px;
+main {
+    grid-column: 2/3;
+    margin: 1rem;
 }
-aside{
-    width: 22rem;
-    text-align: center;
+aside {
+    width: 20rem;
+    height: 90%;
     position: relative;
+    grid-column: 1/2;
+    grid-row: 1/2;
 }
 aside h2{
     position: absolute;
     top: 40px;
-    left: 120px;
+    left: 100px;
     color:#eee
 }
 aside img{
     width: 200px;
     height: auto;
+    margin-left: 20px;
 }
 main img{
     width: 150px;
@@ -68,5 +83,9 @@ footer{
     padding: 2rem;
     background-color: #eee;
     color: #333;
-  }
+}
+.grid {
+    display: grid;
+    align-items: center;
+}
   
