--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,7 +12,7 @@ body{
     font-family: Roboto, Verdana, sans-serif
 }
 nav {
-    background-color: steelblue;
+    background-color: rgb(15, 15, 108);
     padding: 1rem;
     display: flex;
     justify-content: space-evenly;
@@ -28,14 +28,14 @@ nav a {
 }
 h1 {
     font-family: Oswald, sans-serif;
-    color: steelblue;
+    color: rgb(15, 15, 108);
     padding:20px;
-    border-bottom: 1px solid steelblue;
+    border-bottom: 1px solid rgb(15, 15, 108);
 }
 img{
     width: 150px;
     height: auto;
-    border: 1px solid steelblue;
+    border: 1px solid rgb(15, 15, 108);
     padding: 2px;
     box-shadow: 0 0 30px gray;
 }
