--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -4,7 +4,7 @@
 :root {
     --primary-color: #3e3e3eff;
     --secondary-color: #7abbddff;
-    --accent1-color: #f6bf2aff;
+    --accent1-color: hsl(44, 100%, 60%);
     --accent2-color: #494924ff;
   
     --heading-font: 'Oswald', Helvetica, sans-serif;
@@ -60,14 +60,23 @@ header nav a {
 }
 footer{
     display: grid;
-    align-items: center;
+    align-items:center;
     grid-template-columns: repeat(5,20%);
     border-top: 1px solid var(--secondary-color);
 }
 footer p{
-    grid-column: 1/5;
-    display: flex;
+    grid-row: 1;
+    grid-column: 2/5;
     justify-content: center;
+    display: flex;
+}
+.wireframe a{
+    grid-column: 1;
+    grid-row: 1;
+    color: #9c9c9c;
+    font-size: 12px;
+    font-style: italic;
+    text-decoration: none;
 }
 .sociallinks {
     grid-column: 5;
@@ -186,6 +195,19 @@ nav ul li a {
     background-color: var(--accent2-color);
     color: white;
 }
+.CTA-secondary {
+    padding: 10px 20px;
+    color: black;
+    border: none;
+    border-radius: 5px;
+    text-decoration: underline 1px;
+    font-weight: bold;
+    font-size: 18px;
+}
+.CTA-secondary:hover {
+    text-decoration: underline 1px;
+    color: white;
+}
 .bottom-images-container {
     padding-top: 15px;
     display: flex;
@@ -207,6 +229,23 @@ nav ul li a {
 .bottom-image-wrapper .overlay {
     opacity: 0;
     transition: .5s ease;
+}
+.newsletter-form{
+    width: 100%;
+    height: 200px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 15px;
+    font-size: 14px;
+}
+.newsletter{
+    display: grid;
+    grid-template-rows: repeat(3, 20px);
+    grid-template-columns: repeat(7, 14.26%)
+}
+.newsletter .name, .newsletter .email {
+    grid-row: inherit;
 }
 
 /*about-us-page style*/
@@ -324,6 +363,7 @@ figure {
 .trip-details h2 {
     margin-top: 0;
     font-size: 24px;
+    border-top: none;
 }
 
 .trip-details p {
@@ -331,32 +371,15 @@ figure {
 }
 
 .trip-image {
-    width: 200px;
+    height: 455px;
     overflow: hidden;
+    align-self: center;
 }
 
 .trip-image img {
-    width: 100%;
-    height: auto;
+    width: auto;
+    height: 100%;
 }
-
-.CTA {
-    display: inline-block;
-    margin-right: 10px;
-    padding: 10px 20px;
-    color: white;
-    background-color: var(--accent1-color);
-    border: none;
-    border-radius: 5px;
-    text-decoration: none;
-    font-weight: bold;
-}
-
-.CTA:hover {
-    background-color: var(--accent2-color);
-    color: white;
-}
-
 
 /*contact-us-page style*/
 .contact-us {
@@ -422,7 +445,7 @@ figure {
 .message-form p {
     padding: 0 0 30px;
 }
-.message-form h2 {
+.message-form h2, .newsletter-form h2 {
     width: 100%;
 }
 form {
